--- a/info.html
+++ b/info.html
@@ -15,6 +15,6 @@
     <hr>
     <li> GitHub: <a href="https://github.com/CHidalgodeveloper">My company Profile</a></li>
     <li> localRepo: <a href="https://github.com/CHidalgodeveloper/localRepo"> Local Repo</a></li>
-    <li> localRepo: <a href="https://github.com/CHidalgodeveloper/prueba"> Prueba</a></li>
+    <li> Prueba: <a href="https://github.com/CHidalgodeveloper/prueba"> Prueba</a></li>
 </body>
 </html>
